# stemgen

./: .codespellignore  .devcontainer.json  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug.yaml  feature_request.yaml
.github/workflows/: build.yml  checks.yml  pre-commit.yml  stale.yml  test.yml
app/: Cargo.toml
app/src/: app.rs  main.rs  model.rs  player.rs  server.rs  stem_track.rs  waveform.rs
app/src/modal/: color_picker.rs  file_conflict.rs  mod.rs  settings.rs
app/src/widget/: color_option.rs  color_picker.rs  color_selector.rs  mod.rs
cli/: Cargo.toml
cli/src/: cli.rs  constants.rs  create.rs  generate.rs  main.rs
examples/: benchmark.rs  codec.rs
src/: audio_ops.rs  constant.rs  demucs.rs  lib.rs  nistem.rs  track.rs
stembox/: stembox.pxd  stembox.pyx  stembox_api.cpp  stembox_api.h
stemgen/: __main__.py  app.py  cli.py  constant.py  demucs.py  nistemfile.py  track.py
tests/: conftest.py  test_codec.py  test_id3.py
