[package]
name = "stemgen"
version = "0.5.0"
edition = "2024"

[workspace]
members = ["cli"]

[lib]
name = "stemgen"
path = "src/lib.rs"

[dependencies]
taglib = { git = "https://github.com/acolombier/taglib-rust.git", tag = "v2.1.1", features = ["use-pkgconfig", "static", "ni-stem"] }
itertools = "0.13.0"
ffmpeg-next = {version = "5.1.1", default-features = false, features = ["codec","format", "software-resampling"]}
ndarray = { version = "0.16.1"}
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["std","ndarray","copy-dylibs","download-binaries","fetch-models"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"

[dependencies.chrono]
version = "0.4.41"
optional = true

[features]
default = []
cuda = ["ort/cuda" ]

benchmark = ["chrono" ]
