[build-system]
requires = ["setuptools>=61.0", "Cython>=3.0.10"]
build-backend = "setuptools.build_meta"


[tool.licensecheck]
using = "requirements:requirements.txt"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "."
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
