[package]
name = "stemgen-app"
version = "0.5.0"
rust-version.workspace = true
edition = "2024"

[[bin]]
name = "stemgen"
path = "src/main.rs"
doc = false

[dependencies]
iced = { version = "0.13.1", features = [
    "wgpu",
    "tiny-skia",
    "fira-sans",
    "auto-detect-theme",
    "advanced",
    "lazy",
    "svg",
    "system",
    "image",
] }
rfd = "0.14.1"
tokio = { version = "^1.36", features = ["time", "rt"] }
rodio = "0.19.0"
itertools = "0.13.0"
ffmpeg-next = {version = "7.1.0", default-features = false, features = ["codec","format", "software-resampling"]}
uuid = {version="1.18.1", features = ["v4"]}
prost = { version = "0.14", default-features = false, features = ["derive", "std"] }
taglib = { git = "https://github.com/acolombier/taglib-rust.git", tag = "v2.1.1", features = ["use-pkgconfig", "ni-stem"] }
prost-types = "0.14"
memmap = "0.7.0"
bytes = "1.10.1"


[dependencies.stemgen]
path = ".."

[features]
default = []
cuda = ["stemgen/cuda"]
