[package]
name = "stemgen-cli"
version = "0.5.0"
edition = "2024"


[[bin]]
name = "stemgen"
path = "src/main.rs"
doc = false

[dependencies]
clap = {version="4.5.46", features = ["cargo", "derive"]}
ffmpeg-next = {version = "5.1.1", default-features = false, features = ["codec","format", "software-resampling"]}
indicatif = "0.18.0"


[dependencies.stemgen]
path = ".."

[features]
default = []
cuda = ["stemgen/cuda"]
